--- a/src/sections/about/about.css
+++ b/src/sections/about/about.css
@@ -73,3 +73,41 @@
   height: 100%;
   object-fit: cover;
 }
+
+@media (max-width: 640px) {
+  .about-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .about-wrapper {
+    width: 100%;
+    margin: 0 20px;
+  }
+
+  .title-container h1 {
+    margin-top: 30px;
+    margin-bottom: 10px;
+  }
+
+  .title-container h2 {
+    font-size: 15px;
+    width: 100%;
+  }
+
+  .cards-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .card-item {
+    width: 80%;
+  }
+
+  .video-container {
+    width: 100%;
+    height: 100%;
+  }
+}
