--- a/src/sections/index/indexSection.css
+++ b/src/sections/index/indexSection.css
@@ -48,6 +48,7 @@
   text-align: center;
   font-weight: 600;
 }
+
  .index-title-wrapper h2 {
   overflow: hidden;
   color: white;
@@ -67,4 +68,20 @@
   font-weight: 500;
   margin-top: 15px;
   cursor: pointer;
+}
+
+@media (max-width: 640px) {
+  .index-title-container {
+    width: 100%;
+  }
+
+  .index-title-wrapper h1 {
+    overflow: hidden;
+    color: white;
+    font-size: 28px;
+    text-align: center;
+    font-weight: 600;
+    margin-bottom: 10px;
+    padding: 0 20px;
+  }
 }
