--- a/src/sections/services/services.css
+++ b/src/sections/services/services.css
@@ -27,6 +27,11 @@
   display: flex;
   flex-direction: column;
   gap: 15px;
+  order: 2;
+}
+
+.services-text-container.second {
+  order: 1;
 }
 
 .services-text-container h2 {
@@ -40,8 +45,48 @@
   color: white;
   font-weight: 100;
   line-height: 23px;
+  
 }
 
 .services-item img {
   width: 500px;
+  display: flex;
+  order: 1;
+}
+
+@media (max-width: 640px) {
+  .services-wrapper {
+    width: 100vw;
+    padding: 0;
+  }
+
+  .services-item {
+    display: flex;
+    flex-direction: column;
+    margin-top: 40px;
+  }
+
+  .services-text-container h2 {
+    text-align: center;
+    padding: 0 20px;
+  }
+  
+  .services-text-container p {
+    text-align: center;
+    padding: 0 20px;
+  }
+
+  .services-item img {
+    align-self: center;
+    width: 90%;
+  }
+
+  .services-text-container {
+    order: 1;
+  }
+  
+  .services-item {
+    gap: 30px;
+    margin-bottom: 30px;
+  }
 }
